@@ -367,6 +367,15 @@ our %config = (
 #
                         "allow_mail_headers",                 	"false", 	
 #
+# $config{"allow_html"} -> [ "true" | "false" ]
+#
+# In a few USENET groups, HTML tags inside the body are allowed and they're always accepted by the filter. 
+# In all other USENET groups, HTML tags are forbidden but they're used noradays. If $config{"allow_html"}
+# is set to "true" HTML tags are allowed in all groups, if it's set to "false" they are allowed only when
+# each message is sent to a group that explicity allows them
+
+			"allow_html",				"false", 
+#
 # $config{"legal_summary"} -> [ "true" | "false" ]
 #
 # Sometimes, a quick log of all accepted messages could be useful. If this key is "true", for each accepted
