@@ -98,16 +98,16 @@ our %forbidden_crosspost = (							#
 #                                                          			#
 #################################################################################
 										#
-$config{'file_active'}   = "ACTIVE";						#
-$config{'file_badwords'} = "BADWORDS";						#
-$config{'file_banlist'}  = "BANLIST";						#
-$config{'file_access'}   = "ACCESS";						#
-$config{'file_legal'}    = "LEGAL";						#
-$config{'dir_spool'}     = "DIRSPOOL";						#
-$config{'dir_filter'}	 = "DIRFILTER";						#
-$config{'organization'}  = "ORGANIZATION";					# Put here your 'Organization' default value
-$config{'sendmail'}	 = "SENDMAIL";						# innmail path
-$config{'version'}	 = "VERZ";						# INND version must be 2.4 or 2.5 or 2.6
+$config{'file_active'}   = "/var/lib/news/active";						#
+$config{'file_badwords'} = "/etc/news/badwords.conf";						#
+$config{'file_banlist'}  = "/etc/news/banlist.conf";						#
+$config{'file_access'}   = "/var/spool/news/postfilter/access.log";						#
+$config{'file_legal'}    = "/var/spool/news/postfilter/legal.log";						#
+$config{'dir_spool'}     = "/var/spool/news/postfilter/saved/";						#
+$config{'dir_filter'}	 = "/etc/news/filter";						#
+$config{'organization'}  = "A poorly-installed InterNetNews site";					# Put here your 'Organization' default value
+$config{'sendmail'}	 = "/usr/lib/news/bin/innmail";						# innmail path
+$config{'version'}	 = "2.6";						# INND version must be 2.4 or 2.5 or 2.6
 										#
 #################################################################################
 
@@ -279,7 +279,9 @@ our @nomoderation = (								#
 our @htmlallowed = (								#
                         "^clari\.",						# clari.* seems to allow html
 			"^de\.test",						# requested by seamonkey developers
-                        "html"                 					# all groups with 'html' inside
+                        "html",                 				# all groups with 'html' inside
+			"www",							# 'www' groups
+			"php",							# 'php'
                    );								#
 										#
 #################################################################################
@@ -295,6 +297,9 @@ our @htmltags   = (								#
                         "<body>.+<\/body>",					#
                         "<html>.+<\/html>",					#
                         "<a\ href.+>.+<\/a>",					#
+			"<iframe.+>.+<\/iframe>",				#
+			"<style.+>.+<\/style>",					#
+			"<script>.+<\/script>",					#	
                   );								#
 										#
 #################################################################################
@@ -409,6 +414,7 @@ our %csyntax = (
 			"allow_uuencode"		=>		"true|false",
 			"allow_yenc"			=>		"true|false",
 			"allow_mail_headers"		=>		"true|false",
+			"allow_html"			=>		"true|false",
 			"legal_summary"			=>		"true|false",
 			"check_distribution"		=>		"true|false",
 			"max_followup"			=>		"^[0-9]+\$",
